--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -79,15 +79,6 @@ a {
 
 
 /* COMPONENT */
-.modal .err-message {
-  background-color: rgb(var(--primary-color));
-  color: #fff;
-  border-radius: 5px;
-  padding: 10px 15px;
-  margin-top: 20px;
-  margin-bottom: -15px;
-}
-
 .button-primary-small,
 .button-reverse-small {
   padding: 12px 14px;
@@ -453,6 +444,7 @@ form.form .input::placeholder {
 }
 
 .mainpage section.category .category-item > img,
+.detail-category section.category .category-item > img,
 .about section.award .award-item > img,
 .about section.team .team-item > img {
   border-radius: 6px;
@@ -461,6 +453,7 @@ form.form .input::placeholder {
 }
 
 .mainpage section.category .category-item:hover > img,
+.detail-category section.category .category-item:hover > img,
 .about section.award .award-item:hover > img,
 .about section.team .team-item:hover > img {
   box-shadow: 4px 4px 0px 0px rgba(var(--dark-color), 1);
@@ -468,6 +461,7 @@ form.form .input::placeholder {
 }
 
 .mainpage section.category .category-item > h6,
+.detail-category section.category .category-item > h6,
 .about section.award .award-item > h6,
 .about section.team .team-item > h6 {
   opacity: 0;
@@ -484,6 +478,7 @@ form.form .input::placeholder {
 }
 
 .mainpage section.category .category-item:hover > h6,
+.detail-category section.category .category-item:hover > h6,
 .about section.award .award-item:hover > h6,
 .about section.team .team-item:hover > h6 {
   opacity: 1;
@@ -580,23 +575,36 @@ form.form .input::placeholder {
   margin-bottom: 32px;
 }
 
-.mainpage section.about .fact-wrapper .title {
+.mainpage section.about .fact-wrapper .title,
+.detail-category section.hero .fact-wrapper .title {
   margin-bottom: 0;
 }
-.mainpage section.about .caption {
+
+.detail-category section.hero .fact-wrapper {
+  margin-top: 36px;
+}
+
+.detail-category section.hero .fact-wrapper .title {
+  font-size: 3.5rem;
+}
+
+.mainpage section.about .caption,
+.detail-category section.hero .caption {
   font-size: 0.875rem;
   color: rgba(var(--dark-color), 0.42);
   margin-top: 8px;
 }
 
 .mainpage section.gallery img,
-.about section.gallery img {
+.about section.gallery img,
+.artistry section.gallery img {
   border-radius: 5px;
   border: 4px solid rgba(var(--dark-color), 1);
 }
 
 .mainpage section.gallery img:hover,
-.about section.gallery img:hover {
+.about section.gallery img:hover,
+.artistry section.gallery img:hover {
   filter: saturate(0);
 }
 
@@ -635,19 +643,28 @@ form.form .input::placeholder {
 }
 
 .mainpage section.blog .card-blog img,
-.category section.category .card-category img {
+.detail-blog section.blog .card-blog img,
+.blog section.blog .card-blog img,
+.category section.category .card-category img,
+.detail-category section.category .card-category img {
   border: 4px solid rgba(var(--dark-color), 1);
   border-radius: 5px;
   box-shadow: 4px 4px 0px 0px transparent;
 }
 
 .mainpage section.blog .card-blog:hover img,
-.category section.category .card-category:hover img {
+.detail-blog section.blog .card-blog:hover img,
+.blog section.blog .card-blog:hover img,
+.category section.category .card-category:hover img,
+.detail-category section.category .card-category:hover img {
   box-shadow: 4px 4px 0px 0px rgba(var(--dark-color), 1);
 }
 
 .mainpage section.blog .card-blog .card-title,
-.category section.category .card-category .card-title {
+.detail-blog section.blog .card-blog .card-title,
+.blog section.blog .card-blog .card-title,
+.category section.category .card-category .card-title,
+.detail-category section.category .card-category .card-title {
   font-size: 1rem;
   color: rgba(var(--dark-color), 1);
   margin: 14px 0 4px 0;
@@ -656,26 +673,37 @@ form.form .input::placeholder {
 }
 
 .mainpage section.blog .card-blog:hover .card-title,
-.category section.category .card-category:hover .card-title {
+.detail-blog section.blog .card-blog:hover .card-title,
+.blog section.blog .card-blog:hover .card-title,
+.category section.category .card-category:hover .card-title,
+.detail-category section.category .card-category:hover .card-title {
   color: rgba(var(--primary-color), 1);
 }
 
 .mainpage section.blog .card-blog .card-caption,
-.category section.category .card-category .card-caption {
+.detail-blog section.blog .card-blog .card-caption,
+.blog section.blog .card-blog .card-caption,
+.category section.category .card-category .card-caption,
+.detail-category section.category .card-category .card-caption {
   color: rgba(var(--dark-color), 0.72);
   font-size: 0.875rem;
   margin-bottom: 12px;
 }
 
 .mainpage section.blog .card-blog .card-date,
-.category section.category .card-category .card-date {
+.detail-blog section.blog .card-blog .card-date,
+.blog section.blog .card-blog .card-date,
+.category section.category .card-category .card-date,
+.detail-category section.category .card-category .card-date {
   font-size: 0.813rem;
   color: rgba(var(--dark-color), 0.42);
 }
 
 .mainpage section.cta,
 .about section.cta,
-.category section.cta {
+.category section.cta,
+.detail-category section.cta,
+.blog section.cta {
   overflow: hidden;
   padding: 72px 0;
   background-color: rgba(var(--primary-color), 1);
@@ -686,14 +714,18 @@ form.form .input::placeholder {
 
 .mainpage section.cta .headline,
 .about section.cta .headline,
-.category section.cta .headline {
+.category section.cta .headline,
+.detail-category section.cta .headline,
+.blog section.cta .headline {
   color: rgba(var(--light-color), 1);
   margin: 0;
 }
 
 .mainpage section.cta .paragraph,
 .about section.cta .paragraph,
-.category section.cta .paragraph {
+.category section.cta .paragraph,
+.detail-category section.cta .paragraph,
+.blog section.cta .paragraph {
   color: rgba(var(--light-color), 1);
   margin: 36px 0;
   width: 70%;
@@ -701,20 +733,26 @@ form.form .input::placeholder {
 
 .mainpage section.cta .button-reverse,
 .about section.cta .button-reverse,
-.category section.cta .button-reverse {
+.category section.cta .button-reverse,
+.detail-category section.cta .button-reverse,
+.blog section.cta .button-reverse {
   border: 2px solid rgba(var(--dark-color), 1);
   box-shadow: 3px 3px 0 rgba(var(--dark-color), 1);
 }
 
 .mainpage section.cta .button-reverse:hover,
 .about section.cta .button-reverse:hover,
-.category section.cta .button-reverse:hover {
+.category section.cta .button-reverse:hover,
+.detail-category section.cta .button-reverse:hover,
+.blog section.cta .button-reverse:hover {
   box-shadow: none;
 }
 
 .mainpage section.cta .style-1,
 .about section.cta .style-1,
-.category section.cta .style-1 {
+.category section.cta .style-1,
+.detail-category section.cta .style-1,
+.blog section.cta .style-1 {
   position: absolute;
   top: -30%;
   right: -30%;
@@ -726,7 +764,9 @@ form.form .input::placeholder {
 
 .mainpage section.cta .style-2,
 .about section.cta .style-2,
-.category section.cta .style-2 {
+.category section.cta .style-2,
+.detail-category section.cta .style-2,
+.blog section.cta .style-2 {
   position: absolute;
   top: -30%;
   right: -65%;
@@ -756,6 +796,141 @@ form.form .input::placeholder {
 .about section.mission .mission-wrapper .mission-title {
   color: rgba(var(--dark-color), 1);
   font-size: 0.913rem;
+}
+
+.detail-category .hero,
+.blog .hero {
+  margin: 62px 0;
+}
+
+.detail-category form {
+  width: 80%;
+}
+
+.detail-category form .button-submit-search,
+.blog form .button-submit-search {
+  width: 55px;
+  height: 55px;
+  background-color: rgba(var(--primary-color), 1);
+  border: 2px solid rgba(var(--dark-color), 1);
+  box-shadow: 2px 2px 0px 0px rgba(var(--dark-color), 1);
+  outline: none;
+  stroke: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.detail-category form .button-submit-search:hover,
+.blog form .button-submit-search:hover {
+  background-color: rgba(var(--dark-color), 1);
+}
+
+form.form .input:not(:placeholder-shown) ~ .button-submit-search,
+form.form .input:focus ~ .button-submit-search {
+  box-shadow: 2px 2px 0px 0px transparent;
+}
+
+.blog section.hero .caption {
+  font-size: 0.913rem;
+  color: rgba(var(--dark-color), 0.72);
+  margin-top: 36px;
+}
+
+.detail-blog section.hero .title,
+.artistry section.hero .title {
+  margin: 62px 0 32px 0;
+}
+
+.detail-blog section.hero .date,
+.artistry section.hero .date {
+  color: rgba(var(--dark-color), 0.72);
+  font-size: 0.913rem;
+}
+
+.detail-blog section.hero .link-sosmed,
+.artistry section.hero .link-sosmed {
+  font-size: 0.913rem;
+  color: rgba(var(--dark-color), 0.72);
+}
+
+.detail-blog section.hero .link-sosmed:last-child,
+.artistry section.hero .link-sosmed:last-child {
+  padding-left: 10px;
+  margin-left: 10px;
+  position: relative;
+}
+
+.detail-blog section.hero .link-sosmed:last-child::before,
+.artistry section.hero .link-sosmed:last-child::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  background-color: rgba(var(--dark-color), 0.72);
+  width: 1.6px;
+  height: 14px;
+  transform: translateY(-50%);
+}
+
+.detail-blog section.hero .link-sosmed:hover,
+.artistry section.hero .link-sosmed:hover {
+  color: rgba(var(--primary-color), 1);
+  font-family: var(--semibold-font);
+}
+
+.detail-blog section.hero img,
+.artistry section.hero img {
+  margin: 16px 0 36px 0;
+  border-radius: 10px;
+  border: 4px solid rgba(var(--dark-color), 1);
+  box-shadow: 4px 4px 0px 0px rgba(var(--dark-color), 1);
+}
+
+.artistry section.discussion .card-discussion {
+  padding: 30px 24px;
+  background-color: rgba(var(--primary-color), 0.08);
+  border: 1px solid rgba(var(--primary-color), 0.16);
+  border-radius: 5px;
+}
+
+.artistry section.discussion .card-discussion .username {
+  font-size: 1rem;
+  color: rgba(var(--primary-color), 1);
+  font-family: var(--semibold-font);
+  margin-bottom: 6px;
+}
+
+.artistry section.discussion .card-discussion .message {
+  font-size: 0.913rem;
+  color: rgba(var(--dark-color), 0.72);
+}
+
+.artistry section.discussion .card-discussion .like-icon {
+  width: 16px;
+  height: 16px;
+  background-image: url('../../assets/images/icons/like.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.artistry section.discussion .card-discussion.active .like-icon {
+  background-image: url('../images/icons/like-solid.svg');
+}
+
+.artistry section.discussion .card-discussion .link-reply {
+  font-size: 0.875rem;
+  color: rgba(var(--dark-color), 0.72);
+}
+
+.artistry section.discussion .card-discussion .link-reply:hover {
+  text-decoration: underline;
+}
+
+.artistry section.form-discussion .title {
+  margin-bottom: 24px;
 }
 /* END MAINPAGE */
 
@@ -840,7 +1015,9 @@ footer.copyright .copyright {
 
   .mainpage section.cta .paragraph,
   .about section.cta .paragraph,
-  .category section.cta .paragraph {
+  .category section.cta .paragraph,
+  .detail-category section.cta .paragraph,
+  .blog section.cta .paragraph {
       width: 80%;
   }
 }
@@ -867,6 +1044,16 @@ footer.copyright .copyright {
   footer.footer .caption {
       width: 60%;
       text-align: center;
+  }
+
+  .detail-category .hero,
+  .blog .hero {
+      margin: 0 0 62px 0;
+  }
+
+  .detail-blog section.hero .title,
+  .artistry section.hero .title {
+      margin: 32px 0 32px 0;
   }
 }
 
@@ -897,17 +1084,25 @@ footer.copyright .copyright {
 
   .mainpage section.cta,
   .about section.cta,
-  .category section.cta {
+  .category section.cta,
+  .detail-category section.cta,
+  .blog section.cta {
       padding: 52px 6px;
   }
 
   .mainpage section.cta .paragraph,
   .about section.cta .paragraph,
-  .category section.cta .paragraph {
+  .category section.cta .paragraph,
+  .detail-category section.cta .paragraph,
+  .blog section.cta .paragraph {
       width: 100%;
   }
 
   footer.footer .caption {
+      width: 100%;
+  }
+
+  .detail-category form {
       width: 100%;
   }
 }
