--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -575,7 +575,7 @@ form.form .input::placeholder {
     background-image: url('../images/icons/arrow-right-light.svg');
 }
 
-.mainpage section.showcase .swiperShowcase .swiper-slide {
+.swiperShowcase .swiper-slide {
     border-radius: 6px;
     border: 4px solid rgba(var(--dark-color), 1);
 }
