--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -220,8 +220,6 @@ a {
     background-color: rgba(var(--primary-color), 1) !important;
 }
 
-
-
 .row-gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -575,7 +573,7 @@ form.form .input::placeholder {
     background-image: url('../images/icons/arrow-right-light.svg');
 }
 
-.swiperShowcase .swiper-slide {
+section.showcase .swiper-slide {
     border-radius: 6px;
     border: 4px solid rgba(var(--dark-color), 1);
 }
